--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Planets</title>
     <link rel="stylesheet" href="reset.min.css">
-    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
     <body>
         <!-- add html here -->
