--- a/index.html
+++ b/index.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planets</title>
-    <link rel="stylesheet" href="reset.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/reset.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
     <body>
-        <!-- add html here -->
-         <!--start-->
+        <main id="page">
+            <nav>
+                <div class="logo">
+                    <img src="./img/logo.png" alt="logo">
+                    <h1>Planet Facts</h1>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="#">Page 1</a></li>
+                        <li><a href="#">Page 2</a></li>
+                        <li><a href="#">Page 3</a></li>
+                        <li><a href="#">Page 4</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+
+            <header><!-- hero unit -->
+              <figure>
+              </figure>
+              <div class="hero">
+                <h1>Explore the Planets of the Solar System</h1>
+              </div>
+            </header>
+            <footer>
+              <p>&copy; 2025 Hailey Akinsola. All rights reserved.</p>
+            </footer>
+          </main>
     </body>
 </html>
