Adding background image of starry sky

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
     <body>
         <main id="page">
-            <nav>
+            <nav name="top">
                 <div class="logo">
                     <img src="./img/logo.png" alt="logo">
-                    <h1>Planet Facts</h1>
+                    <h1><a href="index.html">Planet Facts</a></h1>
                 </div>
                 <div>
                     <ul>
@@ -30,6 +30,155 @@
               </figure>
               <div class="hero">
                 <h1>Explore the Planets of the Solar System</h1>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
               </div>
             </header>
             <footer>
