Working on hero unit by adding main title and buttons; adding the footer; deleting unused images

--- a/index.html
+++ b/index.html
@@ -8,182 +8,199 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
     <body>
-        <main id="page">
-            <nav name="top">
-                <div class="logo">
-                    <img src="./img/logo.png" alt="logo">
-                    <h1><a href="index.html">Planet Facts</a></h1>
-                </div>
-                <div>
-                    <ul>
-                        <li><a href="#">Page 1</a></li>
-                        <li><a href="#">Page 2</a></li>
-                        <li><a href="#">Page 3</a></li>
-                        <li><a href="#">Page 4</a></li>
-                    </ul>
-                </div>
-            </nav>
+        <nav name="top">
+            <div class="logo">
+                <img src="./img/logo.png" alt="logo">
+                <h1><a href="index.html">Planet Facts</a></h1>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">Page 1</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                    <li><a href="#">Page 4</a></li>
+                </ul>
+            </div>
+        </nav>
 
-
+        <nav class="header">
             <header><!-- hero unit -->
-              <figure>
-              </figure>
-              <div class="hero">
+              <!-- <div class="hero"> -->
                 <h1>Explore the Planets of the Solar System</h1>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-              </div>
+                <div id="button-group">
+                    <a class="button" href="#">Mercury</a>
+                    <a class="button" href="#">Venus</a>
+                    <a class="button" href="#">Earth</a>
+                    <a class="button" href="#">Mars</a>
+                    <a class="button" href="#">Jupiter</a>
+                    <a class="button" href="#">Saturn</a>
+                    <a class="button" href="#">Uranus</a>
+                    <a class="button" href="#">Neptune</a>
+                </div>
             </header>
-            <footer>
-              <p>&copy; 2025 Hailey Akinsola. All rights reserved.</p>
-            </footer>
-          </main>
+        </nav>
+
+            </div>
+              <main>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+                <p>space</p>
+              </main>
+              
+    <nav>
+        <footer class="logo">
+            <ul>
+                <li><a href="index.html"><img src="./img/logo.png" alt="logo"></a></li>
+                <li>&copy; 2025 Hailey Akinsola. All rights reserved.</li>
+                <li><a href="mailto:haakin27@iastate.edu">Contact Us</a></li>
+            </ul>
+        </footer>
+    </nav>
     </body>
 </html>
