Fixing the hero unit to adjust as needed as screen size changes by making the margin be percentages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
 
-        <nav class="header">
+        <nav class="hero">
             <header><!-- hero unit -->
               <!-- <div class="hero"> -->
                 <h1>Explore the Planets of the Solar System</h1>
