Fixing the footer section to have three areas of text that flex as desired when the screen size changes by altering the flex; also fixing button grid layout

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
             </div>
         </nav>
 
-        <nav class="hero">
+        <section class="hero">
             <header><!-- hero unit -->
               <!-- <div class="hero"> -->
                 <h1>Explore the Planets of the Solar System</h1>
                 <div id="button-group">
-                    <a class="button" href="#">Mercury</a>
-                    <a class="button" href="#">Venus</a>
-                    <a class="button" href="#">Earth</a>
-                    <a class="button" href="#">Mars</a>
-                    <a class="button" href="#">Jupiter</a>
-                    <a class="button" href="#">Saturn</a>
-                    <a class="button" href="#">Uranus</a>
-                    <a class="button" href="#">Neptune</a>
+                    <div><a class="button" href="#">Mercury</a></div>
+                    <div><a class="button" href="#">Venus</a></div>
+                    <div><a class="button" href="#">Earth</a></div>
+                    <div><a class="button" href="#">Mars</a></div>
+                    <div><a class="button" href="#">Jupiter</a></div>
+                    <div><a class="button" href="#">Saturn</a></div>
+                    <div><a class="button" href="#">Uranus</a></div>
+                    <div><a class="button" href="#">Neptune</a></div>
                 </div>
             </header>
-        </nav>
+        </section>
 
             </div>
               <main>
@@ -193,14 +193,16 @@
                 <p>space</p>
               </main>
               
-    <nav>
-        <footer class="logo">
-            <ul>
-                <li><a href="index.html"><img src="./img/logo.png" alt="logo"></a></li>
-                <li>&copy; 2025 Hailey Akinsola. All rights reserved.</li>
-                <li><a href="mailto:haakin27@iastate.edu">Contact Us</a></li>
-            </ul>
-        </footer>
-    </nav>
+        <nav class="footer">
+            <div class="footer-item">
+                <a href="index.html"><img src="./img/logo.png" alt="logo" class="footer-logo"></a>
+            </div>
+            <div class="footer-item">
+                <p>&copy; 2025 Hailey Akinsola. All rights reserved.</p>
+            </div>
+            <div class="footer-item">
+                <a href="mailto:haakin27@iastate.edu" class="link">Contact Us</a>
+            </div>
+        </nav>
     </body>
 </html>
