Applying the hover effects found online to the planet buttons in the hero unit

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
               <!-- <div class="hero"> -->
                 <h1>Explore the Planets of the Solar System</h1>
                 <div id="button-group">
-                    <div><a class="button" href="#">Mercury</a></div>
-                    <div><a class="button" href="#">Venus</a></div>
-                    <div><a class="button" href="#">Earth</a></div>
-                    <div><a class="button" href="#">Mars</a></div>
-                    <div><a class="button" href="#">Jupiter</a></div>
-                    <div><a class="button" href="#">Saturn</a></div>
-                    <div><a class="button" href="#">Uranus</a></div>
-                    <div><a class="button" href="#">Neptune</a></div>
+                    <div><a class="button mercury" href="#">Mercury</a></div>
+                    <div><a class="button venus" href="#">Venus</a></div>
+                    <div><a class="button earth" href="#">Earth</a></div>
+                    <div><a class="button mars" href="#">Mars</a></div>
+                    <div><a class="button jupiter" href="#">Jupiter</a></div>
+                    <div><a class="button saturn" href="#">Saturn</a></div>
+                    <div><a class="button uranus" href="#">Uranus</a></div>
+                    <div><a class="button neptune" href="#">Neptune</a></div>
                 </div>
             </header>
         </section>
