Changing the logo image from png to svg and altering color scheme of svg file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav name="top">
             <div class="logo">
-                <img src="./img/logo.png" alt="logo">
+                <a href="index.html"><img src="./img/logo.svg" alt="logo"></a>
                 <h1><a href="index.html">Planet Facts</a></h1>
             </div>
             <div>
@@ -195,7 +195,7 @@
               
         <nav class="footer">
             <div class="footer-item">
-                <a href="index.html"><img src="./img/logo.png" alt="logo" class="footer-logo"></a>
+                <a href="index.html"><img src="./img/logo.svg" alt="logo" class="footer-logo"></a>
             </div>
             <div class="footer-item">
                 <p>&copy; 2025 Hailey Akinsola. All rights reserved.</p>
