Starting the planet description sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <nav name="top">
             <div class="logo">
-                <a href="index.html"><img src="./img/logo.svg" alt="logo"></a>
+                <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
                 <h1><a href="index.html">Planet Facts</a></h1>
             </div>
             <div>
@@ -28,7 +28,7 @@
               <!-- <div class="hero"> -->
                 <h1>Explore the Planets of the Solar System</h1>
                 <div id="button-group">
-                    <div><a class="button mercury" href="#">Mercury</a></div>
+                    <div><a class="button mercury" href="#Mercury">Mercury</a></div>
                     <div><a class="button venus" href="#">Venus</a></div>
                     <div><a class="button earth" href="#">Earth</a></div>
                     <div><a class="button mars" href="#">Mars</a></div>
@@ -37,11 +37,25 @@
                     <div><a class="button uranus" href="#">Uranus</a></div>
                     <div><a class="button neptune" href="#">Neptune</a></div>
                 </div>
+                <h2 id="description">Our solar system has been around for over 4.5 billion years and each planet in our solar system has 
+                    a unique story. Some are boiling hot, others are frozen wastelands, and a few could even support life. 
+                    Discover what makes each world special.</h2>
             </header>
         </section>
 
+        <main>
+            <div class="right" id="Mercury">
+                <div>
+                    <img src="img/mercury.png">
+                </div>
+                <div class="info">
+                    <h2>Mercury</h2>
+                    <p>The smallest and fastest planet, Mercury orbits the Sun in just 88 days. Its surface is covered in craters from 
+                        ancient impacts, and because it has almost no atmosphere, temperatures swing from scorching hot to freezing cold.
+                         Despite being the closest planet to the Sun, it's not the hottest!</p>
+                         <div><a class="button" href="#Mercury">Mercury</a></div>
+                </div>
             </div>
-              <main>
                 <p>space</p>
                 <p>space</p>
                 <p>space</p>
@@ -191,11 +205,11 @@
                 <p>space</p>
                 <p>space</p>
                 <p>space</p>
-              </main>
+        </main>
               
         <nav class="footer">
             <div class="footer-item">
-                <a href="index.html"><img src="./img/logo.svg" alt="logo" class="footer-logo"></a>
+                <a href="index.html"><img src="img/logo.svg" alt="logo" class="footer-logo"></a>
             </div>
             <div class="footer-item">
                 <p>&copy; 2025 Hailey Akinsola. All rights reserved.</p>
