Adjusting the planet description section for mercury by adding padding and grid layout

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div><a class="button uranus" href="#">Uranus</a></div>
                     <div><a class="button neptune" href="#">Neptune</a></div>
                 </div>
-                <h2 id="description">Our solar system has been around for over 4.5 billion years and each planet in our solar system has 
+                <h2 id="preview">Our solar system has been around for over 4.5 billion years and each planet in our solar system has 
                     a unique story. Some are boiling hot, others are frozen wastelands, and a few could even support life. 
                     Discover what makes each world special.</h2>
             </header>
@@ -50,10 +50,10 @@
                 </div>
                 <div class="info">
                     <h2>Mercury</h2>
-                    <p>The smallest and fastest planet, Mercury orbits the Sun in just 88 days. Its surface is covered in craters from 
+                    <p class="description">The smallest and fastest planet, Mercury orbits the Sun in just 88 days. Its surface is covered in craters from 
                         ancient impacts, and because it has almost no atmosphere, temperatures swing from scorching hot to freezing cold.
                          Despite being the closest planet to the Sun, it's not the hottest!</p>
-                         <div><a class="button" href="#Mercury">Mercury</a></div>
+                    <div><a class="button" href="#Mercury">Click</a></div>
                 </div>
             </div>
                 <p>space</p>
