Deleting spacers and creating other planet sections (reversing the grid of the even planets)

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <h1>Explore the Planets of the Solar System</h1>
                 <div id="button-group">
                     <div><a class="button mercury" href="#Mercury">Mercury</a></div>
-                    <div><a class="button venus" href="#">Venus</a></div>
-                    <div><a class="button earth" href="#">Earth</a></div>
-                    <div><a class="button mars" href="#">Mars</a></div>
-                    <div><a class="button jupiter" href="#">Jupiter</a></div>
-                    <div><a class="button saturn" href="#">Saturn</a></div>
-                    <div><a class="button uranus" href="#">Uranus</a></div>
-                    <div><a class="button neptune" href="#">Neptune</a></div>
+                    <div><a class="button venus" href="#Venus">Venus</a></div>
+                    <div><a class="button earth" href="#Earth">Earth</a></div>
+                    <div><a class="button mars" href="#Mars">Mars</a></div>
+                    <div><a class="button jupiter" href="#Jupiter">Jupiter</a></div>
+                    <div><a class="button saturn" href="#Saturn">Saturn</a></div>
+                    <div><a class="button uranus" href="#Uranus">Uranus</a></div>
+                    <div><a class="button neptune" href="#Neptune">Neptune</a></div>
                 </div>
                 <h2 id="preview">Our solar system has been around for over 4.5 billion years and each planet in our solar system has 
                     a unique story. Some are boiling hot, others are frozen wastelands, and a few could even support life. 
@@ -44,7 +44,7 @@
         </section>
 
         <main>
-            <div class="right" id="Mercury">
+            <div class="planets" id="Mercury">
                 <div>
                     <img src="img/mercury.png">
                 </div>
@@ -56,155 +56,100 @@
                     <div><a class="button" href="#Mercury">Click</a></div>
                 </div>
             </div>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
-                <p>space</p>
+
+            <div class="planets" id="Venus">
+                <div class="info">
+                    <h2>Venus</h2>
+                    <p class="description">Often called Earth's "evil twin," Venus is a scorching world with a thick, toxic atmosphere that traps heat 
+                        in an extreme greenhouse effect. Its surface is hot enough to melt lead, and its skies are filled with swirling clouds of sulfuric acid. 
+                        It also spins in the opposite direction of most planets!</p>
+                    <div><a class="button" href="#Venus">Click</a></div>
+                </div>
+                <div>
+                    <img src="img/venus.png">
+                </div>
+            </div>
+
+            <div class="planets" id="Earth">
+                <div>
+                    <img src="img/earth.png">
+                </div>
+                <div class="info">
+                    <h2>Earth</h2>
+                    <p class="description">The only known planet with life, Earth is a blue and green oasis with vast oceans, a breathable atmosphere, 
+                        and diverse ecosystems. It has the perfect conditions for sustaining life, thanks to its mild temperatures and protective magnetic field. 
+                        No other planet has been found to match its balance of water, land, and air.</p>
+                    <div><a class="button" href="#Earth">Click</a></div>
+                </div>
+            </div>
+
+            <div class="planets" id="Mars">
+                <div class="info">
+                    <h2>Mars</h2>
+                    <p class="description">Known as the "Red Planet," Mars is a cold, dusty world with towering volcanoes and deep canyons. 
+                        Scientists believe it once had flowing water, and its thin atmosphere makes it a prime candidate for future human exploration. 
+                        Robotic rovers continue to search for signs of past life.</p>
+                    <div><a class="button" href="#Mars">Click</a></div>
+                </div>
+                <div>
+                    <img src="img/mars.png">
+                </div>
+            </div>
+
+            <div class="planets" id="Jupiter">
+                <div>
+                    <img src="img/jupiter.png">
+                </div>
+                <div class="info">
+                    <h2>Jupiter</h2>
+                    <p class="description">The largest planet in our solar system, Jupiter is a gas giant made mostly of hydrogen and helium. 
+                        Its most famous feature is the Great Red Spot, a massive storm that has been raging for centuries. With over 90 known moons, 
+                        Jupiter is like a mini solar system of its own.</p>
+                    <div><a class="button" href="#Jupiter">Click</a></div>
+                </div>
+            </div>
+
+            <div class="planets" id="Saturn">
+                <div class="info">
+                    <h2>Saturn</h2>
+                    <p class="description">Saturn is the jewel of the solar system, famous for its breathtaking rings made of ice and rock. 
+                        Though it’s a gas giant like Jupiter, its density is so low that it could float in water. Its largest moon, Titan, 
+                        has lakes of liquid methane and an atmosphere thicker than Earth’s!</p>
+                    <div><a class="button" href="#Saturn">Click</a></div>
+                </div>
+                <div>
+                    <img src="img/saturn.png" id="saturn-img">
+                </div>
+            </div>
+
+            <div class="planets" id="Uranus">
+                <div>
+                    <img src="img/uranus.png">
+                </div>
+                <div class="info">
+                    <h2>Uranus</h2>
+                    <p class="description">A pale blue ice giant, Uranus is unique because it rotates on its side, likely due to a massive 
+                        collision in the past. Its atmosphere is filled with methane, giving it its distinct color. It also has faint rings 
+                        and a set of moons with some of the strangest names in the solar system.</p>
+                    <div><a class="button" href="#Uranus">Click</a></div>
+                </div>
+            </div>
+
+            <div class="planets" id="Neptune">
+                <div class="info">
+                    <h2>Neptune</h2>
+                    <p class="description">The farthest planet from the Sun, Neptune is an icy blue giant with the fastest winds in the 
+                        solar system, reaching speeds of over 1,200 mph. It has a deep, mysterious atmosphere and a large storm known as the 
+                        "Great Dark Spot." Its largest moon, Triton, orbits backward, making it one of the most intriguing objects in the solar system.</p>
+                    <div><a class="button" href="#Neptune">Click</a></div>
+                </div>
+                <div>
+                    <img src="img/neptune.png">
+                </div>
+            </div>
+
+            
+
         </main>
               
         <nav class="footer">
