--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <div class="logo">
                 <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
                 <h1><a href="index.html">Planet Facts</a></h1>
+
+                <link rel="preconnect" href="https://fonts.googleapis.com">
+                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
+
             </div>
             <div>
                 <ul>
@@ -36,23 +41,23 @@
                     <div><a class="button uranus" href="#Uranus">Uranus</a></div>
                     <div><a class="button neptune" href="#Neptune">Neptune</a></div>
                 </div>
-                <h2 id="preview">Our solar system has been around for over 4.5 billion years and each planet in our solar system has 
+                <h3 id="preview">Our solar system has been around for over 4.5 billion years and each planet in our solar system has 
                     a unique story. Some are boiling hot, others are frozen wastelands, and a few could even support life. 
-                    Discover what makes each world special.</h2>
+                    Discover what makes each world special.</h3>
             </header>
         </section>
 
         <main>
             <div class="planets" id="Mercury">
                 <div>
-                    <img src="img/mercury.png">
+                    <img src="img/mercury.png" alt="Photo of planet Mercury">
                 </div>
                 <div class="info">
                     <h2>Mercury</h2>
                     <p class="description">The smallest and fastest planet, Mercury orbits the Sun in just 88 days. Its surface is covered in craters from 
                         ancient impacts, and because it has almost no atmosphere, temperatures swing from scorching hot to freezing cold.
                          Despite being the closest planet to the Sun, it's not the hottest!</p>
-                    <div><a class="button" href="#Mercury">Click</a></div>
+                    <div><a class="button" href="#Mercury">More Info</a></div>
                 </div>
             </div>
 
@@ -62,23 +67,23 @@
                     <p class="description">Often called Earth's "evil twin," Venus is a scorching world with a thick, toxic atmosphere that traps heat 
                         in an extreme greenhouse effect. Its surface is hot enough to melt lead, and its skies are filled with swirling clouds of sulfuric acid. 
                         It also spins in the opposite direction of most planets!</p>
-                    <div><a class="button" href="#Venus">Click</a></div>
+                    <div><a class="button" href="#Venus">More Info</a></div>
                 </div>
                 <div>
-                    <img src="img/venus.png">
+                    <img src="img/venus.png" alt="Photo of planet Venus">
                 </div>
             </div>
 
             <div class="planets" id="Earth">
                 <div>
-                    <img src="img/earth.png">
+                    <img src="img/earth.png" alt="Photo of planet Earth">
                 </div>
                 <div class="info">
                     <h2>Earth</h2>
                     <p class="description">The only known planet with life, Earth is a blue and green oasis with vast oceans, a breathable atmosphere, 
                         and diverse ecosystems. It has the perfect conditions for sustaining life, thanks to its mild temperatures and protective magnetic field. 
                         No other planet has been found to match its balance of water, land, and air.</p>
-                    <div><a class="button" href="#Earth">Click</a></div>
+                    <div><a class="button" href="#Earth">More Info</a></div>
                 </div>
             </div>
 
@@ -88,10 +93,10 @@
                     <p class="description">Known as the "Red Planet," Mars is a cold, dusty world with towering volcanoes and deep canyons. 
                         Scientists believe it once had flowing water, and its thin atmosphere makes it a prime candidate for future human exploration. 
                         Robotic rovers continue to search for signs of past life.</p>
-                    <div><a class="button" href="#Mars">Click</a></div>
+                    <div><a class="button" href="#Mars">More Info</a></div>
                 </div>
                 <div>
-                    <img src="img/mars.png">
+                    <img src="img/mars.png" alt="Photo of planet Mars">
                 </div>
             </div>
 
@@ -99,12 +104,12 @@
                 <div>
                     <img src="img/jupiter.png">
                 </div>
-                <div class="info">
+                <div class="info" alt="Photo of planet Jupiter">
                     <h2>Jupiter</h2>
                     <p class="description">The largest planet in our solar system, Jupiter is a gas giant made mostly of hydrogen and helium. 
                         Its most famous feature is the Great Red Spot, a massive storm that has been raging for centuries. With over 90 known moons, 
                         Jupiter is like a mini solar system of its own.</p>
-                    <div><a class="button" href="#Jupiter">Click</a></div>
+                    <div><a class="button" href="#Jupiter">More Info</a></div>
                 </div>
             </div>
 
@@ -114,23 +119,23 @@
                     <p class="description">Saturn is the jewel of the solar system, famous for its breathtaking rings made of ice and rock. 
                         Though it’s a gas giant like Jupiter, its density is so low that it could float in water. Its largest moon, Titan, 
                         has lakes of liquid methane and an atmosphere thicker than Earth’s!</p>
-                    <div><a class="button" href="#Saturn">Click</a></div>
+                    <div><a class="button" href="#Saturn">More Info</a></div>
                 </div>
                 <div>
-                    <img src="img/saturn.png" id="saturn-img">
+                    <img src="img/saturn.png" alt="Photo of planet Saturn">
                 </div>
             </div>
 
             <div class="planets" id="Uranus">
                 <div>
-                    <img src="img/uranus.png">
+                    <img src="img/uranus.png" alt="Photo of planet Uranus">
                 </div>
                 <div class="info">
                     <h2>Uranus</h2>
                     <p class="description">A pale blue ice giant, Uranus is unique because it rotates on its side, likely due to a massive 
                         collision in the past. Its atmosphere is filled with methane, giving it its distinct color. It also has faint rings 
                         and a set of moons with some of the strangest names in the solar system.</p>
-                    <div><a class="button" href="#Uranus">Click</a></div>
+                    <div><a class="button" href="#Uranus">More Info</a></div>
                 </div>
             </div>
 
@@ -140,10 +145,10 @@
                     <p class="description">The farthest planet from the Sun, Neptune is an icy blue giant with the fastest winds in the 
                         solar system, reaching speeds of over 1,200 mph. It has a deep, mysterious atmosphere and a large storm known as the 
                         "Great Dark Spot." Its largest moon, Triton, orbits backward, making it one of the most intriguing objects in the solar system.</p>
-                    <div><a class="button" href="#Neptune">Click</a></div>
+                    <div><a class="button" href="#Neptune">More Info</a></div>
                 </div>
                 <div>
-                    <img src="img/neptune.png">
+                    <img src="img/neptune.png" alt="Photo of planet Neptune">
                 </div>
             </div>
         </main>
