--- a/index.html
+++ b/index.html
@@ -16,14 +16,60 @@
                 <link rel="preconnect" href="https://fonts.googleapis.com">
                 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
                 <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
+                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+
+                <style>
+                    /* Tooltip container */
+                    .tooltip {
+                      position: relative;
+                      display: inline-block;
+                    }
+                    
+                    /* Tooltip text */
+                    .tooltip .tooltiptext {
+                        visibility: hidden;
+                        width: 120px;
+                      background-color: black;
+                      color: #fff;
+                      text-align: center;
+                      padding: 5px 0;
+                      border-radius: 6px;
+
+                    width: 60px;
+                    top: 100%;
+                    left: 50%;
+                    margin-left: -60px;
+                    }
+                    
+                    /* Show the tooltip text when you mouse over the tooltip container */
+                    .tooltip:hover .tooltiptext {
+                      visibility: visible;
+                    }
+                    </style>
 
             </div>
             <div>
                 <ul>
-                    <li><a href="#">Page 1</a></li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
-                    <li><a href="#">Page 4</a></li>
+                    <li><a href="#">
+                        <div class="tooltip">
+                            <i class="tooltip bi bi-search"></i>
+                            <span class="tooltiptext">Search</span>
+                        </div>
+                        <!-- Search -->
+                    </a></li>
+                    <li><a href="#">
+                        <!-- Profile -->
+                        <i class="bi bi-person-fill"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <!-- Settings -->
+                        <i class="bi bi-sliders"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <!-- Cart  -->
+                        <i class="bi bi-cart2"></i>
+                    </a></li>
                 </ul>
             </div>
         </nav>
@@ -57,7 +103,7 @@
                     <p class="description">The smallest and fastest planet, Mercury orbits the Sun in just 88 days. Its surface is covered in craters from 
                         ancient impacts, and because it has almost no atmosphere, temperatures swing from scorching hot to freezing cold.
                          Despite being the closest planet to the Sun, it's not the hottest!</p>
-                    <div><a class="button" href="#Mercury">More Info</a></div>
+                    <div><a class="button" href="#Mercury">More <i class="bi-arrow-right"></i></a></div>
                 </div>
             </div>
 
@@ -67,7 +113,7 @@
                     <p class="description">Often called Earth's "evil twin," Venus is a scorching world with a thick, toxic atmosphere that traps heat 
                         in an extreme greenhouse effect. Its surface is hot enough to melt lead, and its skies are filled with swirling clouds of sulfuric acid. 
                         It also spins in the opposite direction of most planets!</p>
-                    <div><a class="button" href="#Venus">More Info</a></div>
+                    <div><a class="button" href="#Venus">More <i class="bi-arrow-right"></i></a></div>
                 </div>
                 <div>
                     <img src="img/venus.png" alt="Photo of planet Venus">
@@ -83,7 +129,7 @@
                     <p class="description">The only known planet with life, Earth is a blue and green oasis with vast oceans, a breathable atmosphere, 
                         and diverse ecosystems. It has the perfect conditions for sustaining life, thanks to its mild temperatures and protective magnetic field. 
                         No other planet has been found to match its balance of water, land, and air.</p>
-                    <div><a class="button" href="#Earth">More Info</a></div>
+                    <div><a class="button" href="#Earth">More <i class="bi-arrow-right"></i></a></div>
                 </div>
             </div>
 
@@ -93,7 +139,7 @@
                     <p class="description">Known as the "Red Planet," Mars is a cold, dusty world with towering volcanoes and deep canyons. 
                         Scientists believe it once had flowing water, and its thin atmosphere makes it a prime candidate for future human exploration. 
                         Robotic rovers continue to search for signs of past life.</p>
-                    <div><a class="button" href="#Mars">More Info</a></div>
+                    <div><a class="button" href="#Mars">More <i class="bi-arrow-right"></i></a></div>
                 </div>
                 <div>
                     <img src="img/mars.png" alt="Photo of planet Mars">
@@ -109,7 +155,7 @@
                     <p class="description">The largest planet in our solar system, Jupiter is a gas giant made mostly of hydrogen and helium. 
                         Its most famous feature is the Great Red Spot, a massive storm that has been raging for centuries. With over 90 known moons, 
                         Jupiter is like a mini solar system of its own.</p>
-                    <div><a class="button" href="#Jupiter">More Info</a></div>
+                    <div><a class="button" href="#Jupiter">More <i class="bi-arrow-right"></i></a></div>
                 </div>
             </div>
 
@@ -119,7 +165,7 @@
                     <p class="description">Saturn is the jewel of the solar system, famous for its breathtaking rings made of ice and rock. 
                         Though it’s a gas giant like Jupiter, its density is so low that it could float in water. Its largest moon, Titan, 
                         has lakes of liquid methane and an atmosphere thicker than Earth’s!</p>
-                    <div><a class="button" href="#Saturn">More Info</a></div>
+                    <div><a class="button" href="#Saturn">More <i class="bi-arrow-right"></i></a></div>
                 </div>
                 <div>
                     <img src="img/saturn.png" alt="Photo of planet Saturn">
@@ -135,7 +181,7 @@
                     <p class="description">A pale blue ice giant, Uranus is unique because it rotates on its side, likely due to a massive 
                         collision in the past. Its atmosphere is filled with methane, giving it its distinct color. It also has faint rings 
                         and a set of moons with some of the strangest names in the solar system.</p>
-                    <div><a class="button" href="#Uranus">More Info</a></div>
+                    <div><a class="button" href="#Uranus">More <i class="bi-arrow-right"></i></a></div>
                 </div>
             </div>
 
@@ -145,7 +191,7 @@
                     <p class="description">The farthest planet from the Sun, Neptune is an icy blue giant with the fastest winds in the 
                         solar system, reaching speeds of over 1,200 mph. It has a deep, mysterious atmosphere and a large storm known as the 
                         "Great Dark Spot." Its largest moon, Triton, orbits backward, making it one of the most intriguing objects in the solar system.</p>
-                    <div><a class="button" href="#Neptune">More Info</a></div>
+                    <div><a class="button" href="#Neptune">More <i class="bi-arrow-right"></i></a></div>
                 </div>
                 <div>
                     <img src="img/neptune.png" alt="Photo of planet Neptune">
