--- a/index.html
+++ b/index.html
@@ -6,76 +6,41 @@
     <title>Planets</title>
     <link rel="stylesheet" href="./css/reset.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
     <body>
-        <nav name="top">
+        <nav>
             <div class="logo">
                 <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
                 <h1><a href="index.html">Planet Facts</a></h1>
-
-                <link rel="preconnect" href="https://fonts.googleapis.com">
-                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-                <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
-                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-
-                <style>
-                    /* Tooltip container */
-                    .tooltip {
-                      position: relative;
-                      display: inline-block;
-                    }
-                    
-                    /* Tooltip text */
-                    .tooltip .tooltiptext {
-                        visibility: hidden;
-                        width: 120px;
-                      background-color: black;
-                      color: #fff;
-                      text-align: center;
-                      padding: 5px 0;
-                      border-radius: 6px;
-
-                    width: 60px;
-                    top: 100%;
-                    left: 50%;
-                    margin-left: -60px;
-                    }
-                    
-                    /* Show the tooltip text when you mouse over the tooltip container */
-                    .tooltip:hover .tooltiptext {
-                      visibility: visible;
-                    }
-                    </style>
-
             </div>
             <div>
                 <ul>
-                    <li><a href="#">
-                        <div class="tooltip">
-                            <i class="tooltip bi bi-search"></i>
-                            <span class="tooltiptext">Search</span>
-                        </div>
-                        <!-- Search -->
+                <li><a href="#">
+                        <i class="bi bi-search"></i>
+                        <span class="tooltip">Search</span>
                     </a></li>
                     <li><a href="#">
-                        <!-- Profile -->
                         <i class="bi bi-person-fill"></i>
+                        <span class="tooltip">Profile</span>
                     </a></li>
                     <li><a href="#">
-                        <!-- Settings -->
-                        <i class="bi bi-sliders"></i>
-                    </a></li>
+                            <i class="bi bi-sliders"></i>
+                            <span class="tooltip">Settings</span>
+                        </a></li>
                     <li><a href="#">
-                        <!-- Cart  -->
-                        <i class="bi bi-cart2"></i>
-                    </a></li>
+                            <i class="bi bi-cart"></i>
+                            <span class="tooltip">Cart</span>
+                        </a></li>
                 </ul>
             </div>
         </nav>
 
         <section class="hero">
-            <header><!-- hero unit -->
+            <header>
                 <h1>Explore the Planets of the Solar System</h1>
                 <div id="button-group">
                     <div><a class="button mercury" href="#Mercury">Mercury</a></div>
@@ -148,9 +113,9 @@
 
             <div class="planets" id="Jupiter">
                 <div>
-                    <img src="img/jupiter.png">
+                    <img src="img/jupiter.png" alt="Photo of planet Jupiter">
                 </div>
-                <div class="info" alt="Photo of planet Jupiter">
+                <div class="info">
                     <h2>Jupiter</h2>
                     <p class="description">The largest planet in our solar system, Jupiter is a gas giant made mostly of hydrogen and helium. 
                         Its most famous feature is the Great Red Spot, a massive storm that has been raging for centuries. With over 90 known moons, 
@@ -204,10 +169,10 @@
                 <a href="index.html"><img src="img/logo.svg" alt="logo" class="footer-logo"></a>
             </div>
             <div class="footer-item">
-                <p>&copy; 2025 Hailey Akinsola. All rights reserved.</p>
+                <p>&copy; 2025 Hailey Akinsola</p>
             </div>
             <div class="footer-item">
-                <a href="mailto:haakin27@iastate.edu" class="link">Contact Us</a>
+                <a href="mailto:haakin27@iastate.edu" class="link">Contact</a>
             </div>
         </nav>
     </body>
